# weather_aggregator

./: .gitignore  .pre-commit-config.yaml  README.md  manage.py  pyproject.toml
bulgarian_meteo_pro/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
bulgarian_meteo_pro/migrations/: 0001_initial.py  0002_bulgarianmeteoprodata_created_at.py  0003_alter_bulgarianmeteoprodata_options_and_more.py
postman/: Weather Aggregator.postman_collection.json
stations/: models.py  serializers.py  urls.py  views.py
tests/bulgarian_meteo_pro/: test_views.py
tests/stations/: test_views.py
tests/weather_master_x/: test_views.py
weather_aggregator/: asgi.py  settings.py  urls.py  wsgi.py
weather_master_x/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
weather_master_x/migrations/: 0001_initial.py  0002_alter_weathermasterxdata_city_and_more.py
